kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkanalyze-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: checkanalyze.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 8081
